add first section text
chose to use link button stylized, add text headline and subheadline.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>The hidden influence</title>
+    <link  rel="stylesheet" type="text/css"    href="styles.css"/>   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-    <img src="logo.png" alt="wooden trunk as logo">
+    <img class="logo" src="logo.png" alt="wooden trunk as logo">
+        <div class="header-links">
+        <a href="https://www.theodinproject.com/lessons/foundations-landing-page" target="parent"   rel="norefferrer" >Our goal</a>            
+        <a href="https://www.theodinproject.com/about" target="parent" rel="norefferrer">about us</a>
+        <a href="https://github.com/Schuw" target="parent" rel="norefferrer">myself</a>
+        </div>
     </div>
     <div class="section1">
-
+        <div class="left1">
+            <div class="main-text">Discover how ancient tales of lost civilizations shaped human imagination.</div>
+            <div>Throughout history, cultures around the world have shared myths of advanced cities that vanished over time. Explore the origins of these stories and what they reveal about our own search for knowledge.</div>
+            <a class="button1" href="https://en.wikipedia.org/wiki/Atlantis">Learn more</button>
+        </div>
     </div>
     <div class="section2">
 
