--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             </div>
     </div>
     <div class="section3">
-        <div>“This content gave me a clear and engaging overview of ancient civilization myths. It made the topic easy to understand and sparked my curiosity to learn more.”</div>
-        <div>ChatGPT — Chat-Getting-Pretty-Talkative</div>
+        <div class="quote">
+        <h1>“This content gave me a clear and engaging overview of ancient civilization myths. It made the topic easy to understand and sparked my curiosity to learn more.”</h1>
+        <h2>ChatGPT — Chat-Getting-Pretty-Talkative</h2>
+        </div>
     </div>
     <div class="section4">
 
