--- a/index.html
+++ b/index.html
@@ -58,10 +58,19 @@
         </div>
     </div>
     <div class="section4">
-
-    </div>
+        <div class="section4container">
+            <div class="section4left">
+            <div class="boldtext">Learn more about the topic! it's time!</div>
+            <div class="light">Dive deeper and uncover the stories behind the mystery.</div>
+            </div>
+            <div class="section4button">
+            <a href="https://en.wikipedia.org/wiki/Atlantis">Click here!</a>
+            </div>
+    </div>      
+</div>
     <div class="footer">
-
+        <div>copright © The Odin Project 2025</div>
     </div>
+
 </body>
 </html>
